--- a/15-MEAN/nest-backend/.gitignore
+++ b/15-MEAN/nest-backend/.gitignore
@@ -14,6 +14,9 @@ lerna-debug.log*
 # OS
 .DS_Store
 
+#environmnet
+.env
+
 # Tests
 /coverage
 /.nyc_output
@@ -33,3 +36,6 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+#DB
+mongo
